# Peeping

./: ApiService.cs  App.xaml  DeviceStatus.cs  IconService.cs  MainWindow.xaml  MainWindow.xaml.cs  Peeping.csproj  README.md  SystemMonitorService.cs  config.xml
.github/workflows/: build.yml
MonitorService/: Install-Start.ps1  Stop-Uninstall.ps1
Peeping/: ApiService.cs  App.xaml.cs  DeviceStatus.cs  MainWindow.xaml.cs  Peeping.csproj  Peeping.sln  SystemMonitorService.cs
app/: app.py  config.json  package-lock.json  package.json  server.js
net8.0-windows/: Peeping.deps.json
wincl/: CMakeLists.txt  MonitorService.cpp
